--- a/configs/Open-MAGVIT2/gpu/imagenet_lfqgan_256_L.yaml
+++ b/configs/Open-MAGVIT2/gpu/imagenet_lfqgan_256_L.yaml
@@ -34,7 +34,7 @@ model:
       in_channels: 3
       out_ch: 3
       ch: 128
-      ch_mult: [1,1,2,2,4]  # num_down = len(ch_mult)-1
+      ch_mult: [1, 1, 2, 2, 4] # num_down = len(ch_mult)-1
       num_res_blocks: 4
 
     lossconfig:
