--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "seed-voken"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "<3.12,>=3.8"
+requires-python = "<3.12,>=3.10"
 dependencies = [
     "academictorrents",
     "albumentations==1.4.4",
@@ -23,4 +23,8 @@ dependencies = [
     "torch>=2.4.0",
     "torchvision>=0.19.0",
     "transformers==4.37.2",
+    "livekit",
+    "livekit-api",
+    "python-dotenv>=1.0",
+    "pandas",
 ]
